new version file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Coursera Students! I'm thrilled</h1>
+    <h1>Hello Coursera! I'm thrilled</h1>
 </body>
 </html>
